# tohou-clone

./: Cargo.toml  index-1ccee3445eb98e6.css  index-376f9638fd77c903.js  index-376f9638fd77c903_bg.wasm  index-3d7f04570de8ce0a.js  index-3d7f04570de8ce0a_bg.wasm  index-86695f789b55947a.js  index-86695f789b55947a_bg.wasm  index-8f4675631819667d.js  index-8f4675631819667d_bg.wasm  index-972ad6343ee1052f.js  index-972ad6343ee1052f_bg.wasm  index-a69f9f9d86e93511.js  index-a69f9f9d86e93511_bg.wasm  index-b723fb92bf8cf4b8.js  index-b723fb92bf8cf4b8_bg.wasm  index-b9b4f05183b90fc5.js  index-b9b4f05183b90fc5_bg.wasm  index-c57b1590132fa968.js  index-c57b1590132fa968_bg.wasm  index-d0231e195eb1f6ff.js  index-d0231e195eb1f6ff_bg.wasm  index-d147e98a86b63cf4.js  index-d147e98a86b63cf4_bg.wasm  index-d3de0b51063b6959.css  index.html
.github/workflows/: deploy.yaml
src/: app.rs  audio.rs  download.rs  enemy.rs  geometry.rs  level.rs  main.rs  textures.rs  world.rs
src/enemies/: bullet_emmiters.rs  mod.rs  premade.rs  trajectories.rs
src/level/: l1.rs  l2.rs  mod.rs
